--- a/src/css/scss/Position.scss
+++ b/src/css/scss/Position.scss
@@ -7,9 +7,9 @@
 }
 
 .fixed {
-  position: fixed;
+  position: fixed !important;
 }
 
 .sticky {
-  position: sticky;
+  position: sticky !important;
 }
