--- a/src/Components/Coding/Styles/Coding.css
+++ b/src/Components/Coding/Styles/Coding.css
@@ -2,6 +2,7 @@
     background-color: #1E1E1E;
     height: 100%;
     overflow: hidden;
+    flex: 1;
 }
 
 .Coding-sec h3 {
@@ -63,20 +64,23 @@
     border-bottom: solid 1px #2D2D30;
     background-color: #1c1c1d;
 }
-.code-section>.head>.tec-logo{
+
+.code-section>.head>.tec-logo {
     height: 30px;
     width: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.code-section>.head>.tec-logo>img{
+
+.code-section>.head>.tec-logo>img {
     height: 66%;
     width: 66%;
     object-fit: contain;
 
 }
-.code-section>.head>p{
+
+.code-section>.head>p {
     font-size: 12px;
     font-weight: 400;
     color: #989898;
@@ -93,26 +97,30 @@
     font-weight: 400;
 }
 
-.cod-fot{
+.cod-fot {
     height: 50px;
-    width: 100%;
     bottom: 0px;
 }
-.cod-fot a{
-    font-size: 14px;
-    font-weight: 500;
+
+.cod-fot a {
+    font-size: 12.5px;
+    font-weight: 400;
     text-decoration: none;
-    color: #e8e8e8;
+    color: #9b9b9b;
 }
-.cod-fot .ski{
-    height: 30px;
-    width: 30px;
-    color: #4e4a4a;
+.cod-fot a:hover{
+    text-decoration: underline;
+}
+
+.cod-fot>a {
+    font-size: 13.5px;
+    font-weight: 300;
+    color: #b3b6b9;
 }
 
 
 @media (max-width: 840px) {
-    .cod-fot{
+    .cod-fot {
         display: none;
     }
 }
