--- a/src/Pages/Testing/Test.css
+++ b/src/Pages/Testing/Test.css
@@ -1,11 +1,21 @@
-.Test{
-    background-color: #e2e2e2;
-    border: solid 1px var(--border-high);
-    box-shadow: 1px 3px 8px #00000063;
-    display: flex;
-    flex-wrap: nowrap;
-    height: 500px;
-    width: 720px;
-    overflow: hidden;
+.rectangle{
+    border: solid 1px var(--sk-br);
+    background-color: #e3e6e8;
+    box-shadow: 1px 2px 5px #21232439;
+    height: 350px;
+    width: 460px;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
+.recmain{
+    display: flex;
+    height: max-content !important;
+    width: 100% !important;
+}
+
+.wasa{
+    height: 500px;
+    width: 100%;
 }
