--- a/src/Pages/Editor/Coding/Coding.css
+++ b/src/Pages/Editor/Coding/Coding.css
@@ -1,126 +1,4 @@
-.Coding-sec {
-    background-color: #1E1E1E;
+.cod-side{
     height: 100%;
-    overflow: hidden;
-    flex: 1;
-}
-
-.Coding-sec h3 {
-    text-wrap: nowrap;
-    color: #FFF;
-    font-size: 1.8rem;
-    font-weight: 700;
-}
-
-
-.code-section {
-    border: solid 1px #353538;
-    overflow: hidden;
-    height: fit-content;
-}
-
-.code-section textarea {
-    outline: none;
-    border: none;
     width: 100%;
-    background-color: #252526;
-    resize: vertical;
-    color: #efefef;
-    overflow: hidden;
-    text-wrap: nowrap;
-    min-height: 200px;
-    height: 280px;
-    line-height: 22px;
-}
-
-.code-section:hover textarea {
-    overflow-x: auto;
-}
-
-.code-section textarea::-webkit-scrollbar {
-    cursor: default;
-    height: 8px;
-}
-
-.code-section textarea::-webkit-scrollbar-corner {
-    border: none;
-    background-color: transparent;
-}
-
-.code-section textarea::-webkit-scrollbar-button {
-    border: none;
-    background-color: transparent;
-}
-
-.code-section textarea::-webkit-scrollbar-thumb {
-    cursor: default;
-    background-color: #464646;
-    height: 10px;
-}
-
-
-.code-section>.head {
-    height: 40px;
-    border-bottom: solid 1px #2D2D30;
-    background-color: #1c1c1d;
-}
-
-.code-section>.head>.tec-logo {
-    height: 30px;
-    width: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.code-section>.head>.tec-logo>img {
-    height: 66%;
-    width: 66%;
-    object-fit: contain;
-
-}
-
-.code-section>.head>p {
-    font-size: 12px;
-    font-weight: 400;
-    color: #989898;
-    letter-spacing: 1px;
-}
-
-.btn-primary {
-    font-size: 13px;
-    border: solid 1px var(--font-white);
-    padding: 10px 32px;
-    cursor: pointer;
-    color: #FFF;
-    z-index: 10;
-    font-weight: 400;
-}
-
-.cod-fot {
-    height: 50px;
-    bottom: 0px;
-}
-
-.cod-fot a {
-    font-size: 12.5px;
-    font-weight: 400;
-    text-decoration: none;
-    color: #9b9b9b;
-}
-.cod-fot a:hover{
-    text-decoration: underline;
-}
-
-.cod-fot>a {
-    font-size: 13.5px;
-    font-weight: 300;
-    color: #b3b6b9;
-}
-
-
-@media (max-width: 840px) {
-    .cod-fot {
-        display: none;
-    }
 }
