--- a/src/Pages/Editor/Result/Result.css
+++ b/src/Pages/Editor/Result/Result.css
@@ -1,344 +1,5 @@
-.result {
-    width: max-content;
-    flex: 1;
-}
-
-.result div>h3 {
-    font-size: 15px;
-    font-weight: 600;
-    color: #3C4043;
-}
-
-.r-item {
-    margin-top: var(--spacing-2);
-}
-
-.r-item>h2 {
-    color: #5F6368;
-    font-size: 15px;
-    margin-bottom: 1rem;
-}
-
-/* #region Googlee */
-.r-google {
-    max-width: 690px;
-}
-
-.r-google h3 {
-    color: #1a0dab;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 1.2;
-    font-family: Arial, sans-serif;
-}
-
-.r-i-title:hover h3 {
-    text-decoration: underline;
-}
-.r-i-title{
-    text-decoration: none;
-}
-
-
-.r-i-redirect {
-    gap: 2px;
-}
-
-.r-i-redirect p:nth-child(1) {
-    color: #202124;
-    font-size: 15px;
-    font-family: sans-serif;
-    line-height: 20px;
-}
-
-.r-i-redirect>p {
-    color: #4d5156;
-    font-size: 12px;
-    font-family: sans-serif;
-    font-weight: 400;
-}
-
-.r-google span {
-    color: #4d5156;
-    fill: #4d5156;
-    font-size: 14px;
-    font-family: sans-serif;
-    font-weight: 500;
-    line-height: 1.54;
-    letter-spacing: 0.1px;
-}
-
-.g-sec>a {
-    text-decoration: none;
-}
-
-.g-sec .green {
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: normal;
-    font-family: sans-serif;
-    color: #006621;
-    font-weight: 400;
-}
-
-.triangle {
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-bottom: 7px solid #0c7e31;
-    transform: rotate(180deg);
-}
-
-
-.g-sec h3:hover {
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-/* #endregion */
-
-.i-card {
-    border-radius: 14px;
-    border: solid 1px var(--sk-br);
-    background-color: var(--sk-in);
-}
-
-.r-twitter>.i-card {
-    height: max-content;
-    width: 410px;
-    overflow: hidden;
-}
-
-.r-twitter h3 {
-    font-size: 1rem;
-    font-weight: 700;
-    color: #18283e;
-}
-
-.r-twitter>.i-card>div {
-    padding: .75rem 1rem;
-}
-
-.r-twitter>.i-card>div>p.description {
-    font-size: 14px !important;
-    color: #18283e;
-}
-
-.r-twitter>.i-card>div>p {
-    color: #686b6e;
-    font-size: 12px;
-    font-family: sans-serif;
-    line-height: 1.2;
-    font-weight: 500;
-}
-
-.r-twitter>.i-card>span {
-    height: 235px;
+.res-side{
+    background-color: blue;
+    height: 100%;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.r-twitter>.i-card>span>img {
-    height: 235px;
-    width: 100%;
-    object-fit: cover;
-    display: block;
-}
-
-
-.r-facebook>.i-card {
-    height: max-content;
-    width: 480px;
-    overflow: hidden;
-}
-
-.r-facebook>.i-card>span {
-    height: 260px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.r-facebook>.i-card>span>img {
-    height: 260px;
-    width: 100%;
-    object-fit: cover;
-}
-
-.r-facebook>.i-card>div {
-    padding: .75rem 1rem;
-}
-
-.r-facebook h3 {
-    border-collapse: separate;
-    font-weight: 600;
-    color: #1d2129;
-}
-
-.r-facebook>.i-card>div p {
-    font-size: 12px;
-    text-transform: uppercase;
-    line-height: 1.2;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #606770;
-}
-
-.r-facebook>.i-card>div p.description {
-    font-size: 14px;
-    font-family: 'Inter', sans-serif;
-    text-transform: none;
-    font-weight: 400;
-    color: #5e6267;
-}
-
-.r-srch-in label>input {
-    outline: none;
-    border: solid 1px #DFE1E5;
-    box-shadow: 1px 2px 6px #0000002b;
-    color: #1d2129;
-    font-size: 15px;
-    height: 50px;
-    width: 100%;
-    min-width: 450px;
-    font-weight: 400;
-    padding-inline: 60px;
-}
-
-.r-srch-in label>input::placeholder {
-    color: #2e2f31;
-}
-.s-m-s{
-    left: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-}
-.s-ma-cm{
-    right: 20px;
-}
-
-.g-blue-btn {
-    outline: none;
-    border: none;
-    background-color: #1A73E8;
-    font-size: 14px;
-    font-weight: 400;
-    color: #FFF;
-    padding: 12px 32px;
-    letter-spacing: 0.4px;
-}
-.pop-icons{
-    z-index: 10000;
-}
-.pop-icons > div{
-    top: 0;
-    height: 100vh;
-}
-
-.stgs-icon{
-    height: 40px;
-    width: 40px;
-    right: 1%;
-    bottom: 22px;
-    transform: rotate(0deg);
-    transition: transform 0.2s;
-}
-.stgs-icon.active{
-    transform: rotate(-90deg);
-}
-
-
-
-@media (max-width: 840px) {
-    .result {
-        width: 100%;
-    }
-
-    .r-srch-in {
-        width: 100%;
-    }
-
-    .r-srch-in label {
-        flex-direction: column;
-    }
-
-    .r-srch-in label>input {
-        width: 100%;
-        min-width: 295px;
-    }
-    .s-ma-cm{
-        display: none;
-    }
-}
-
-
-
-
-.st0 {
-    fill: #1A73E8;
-}
-
-.st1 {
-    fill: #EA4335;
-}
-
-.st2 {
-    fill: #4285F4;
-}
-
-.st3 {
-    fill: #FBBC04;
-}
-
-.st4 {
-    fill: #34A853;
-}
-
-.st5 {
-    fill: #4CAF50;
-}
-
-.st6 {
-    fill: #1E88E5;
-}
-
-.st7 {
-    fill: #E53935;
-}
-
-.st8 {
-    fill: #C62828;
-}
-
-.st9 {
-    fill: #FBC02D;
-}
-
-.st10 {
-    fill: #1565C0;
-}
-
-.st11 {
-    fill: #2E7D32;
-}
-
-.st12 {
-    fill: #F6B704;
-}
-
-.st13 {
-    fill: #E54335;
-}
-
-.st14 {
-    fill: #4280EF;
-}
-
-.st15 {
-    fill: #34A353;
 }
