--- a/src/Pages/Editor/Coding/Coding.css
+++ b/src/Pages/Editor/Coding/Coding.css
@@ -2,33 +2,62 @@
     border-right: solid 2px #cbcbcb;
     height: 100%;
     width: 560px;
-    padding: 28px;
+}
+.cod-s-cont{
+    height: calc(100% - 80px);
+    padding: 28px 28px 0px 28px;
+    overflow: auto;
 }
 
 .cs-list {
-    border-bottom: solid 2px #D3D3D3;
     height: 50px;
     width: 100%;
-    padding: 0px 14px 0px 8px;
     cursor: pointer;
+    overflow: hidden;
 }
-.cs-l-head{
+.cs-list.active{
+    margin-bottom: 20px;
+    overflow: visible;
+}
+
+.cs-l-head {
     height: 50px;
+    border-bottom: solid 2px #D3D3D3;
+    padding: 10px 6px;
 }
-.cs-a-icon{
+
+.cs-a-icon {
     rotate: -90deg;
 }
-.cs-a-icon svg{
+
+.cs-a-icon svg {
     fill: #aaaaaa;
     height: 30px;
 }
 
-.cod-s-footer {
+.cs-l-cont {
+    height: max-content;
+}
+
+.cs-l-cont input {
+    padding: 12px 18px;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.cs-l-cont textarea {
+    height: 100px;
     width: 100%;
-    padding: 0px 28px;
-    bottom: 22px;
-    left: 50%;
-    transform: translateX(-50%);
+    padding: 12px 18px;
+    font-size: 15px;
+    font-weight: 400;
+    resize: none;
+}
+
+.cod-s-footer {
+    background-color: #FFF;
+    width: 100%;
+    padding: 0px 28px 28px 28px;
 }
 
 .btn-code {
