--- a/src/Pages/Editor/Result/Result.css
+++ b/src/Pages/Editor/Result/Result.css
@@ -1,31 +1,58 @@
-.res-side{
+.res-side {
     height: 100%;
     width: 100%;
 }
-.rs-header{
+
+.rs-header {
     padding: 36px;
 }
-.rs-title{
+
+.rs-title {
     font-size: 36px;
     font-weight: 600;
     font-family: Inter;
     color: #43464E;
 }
-.rs-h-social{
+
+.rs-h-social {
     list-style: none;
-    height: 60px;
-    width: 60px;
-    background-color: var(--sk-in);
-    border: solid 1px var(--sk-br);
+    height: 56px;
+    width: 56px;
+    overflow: hidden;
+    transition: transform 0.2s;
+}
+.rs-h-social:hover{
+    transform: scale(1.05);
 }
 
-.rs-main{
+.rs-h-social>.google {
+    scale: 1;
+}
+
+.rs-h-social>.twitter {
+    scale: 1.2;
+}
+
+.rs-h-social>.facebook {
+    scale: 1.24;
+}
+
+.rs-h-social>.discord {
+    scale: 1.13;
+}
+
+.rs-h-social>.linkedin {
+    scale: 1.1;
+}
+
+
+.rs-main {
     height: max-content;
     width: 100%;
     padding: 0px 64px;
 }
 
-.rs-subtitle{
+.rs-subtitle {
     font-size: 17px;
     font-weight: 600;
     color: #383a40;
