--- a/src/Pages/Editor/Result/Twitter/Twitter.css
+++ b/src/Pages/Editor/Result/Twitter/Twitter.css
@@ -2,7 +2,6 @@
     border-radius: 16px;
     border: solid 1px #C2C7CA;
     width: 510px;
-    flex-wrap: wrap;
 }
 
 .t-link {
@@ -10,9 +9,41 @@
     font-weight: 400;
     font-family: Inter;
     color: #536471;
+    word-break: break-all;
 }
 
-.tc-noimg{
+.tc-noimg {
     height: 130px;
     width: 130px;
+    border-right: solid 1px #C2C7CA;
+}
+
+.tc-info {
+    width: calc(100% - 130px);
+    padding: 16px 12px;
+}
+
+.tc-info>label {
+    font-weight: 500;
+    font-size: 16px;
+    color: #0F1419;
+}
+.t-sec-card{
+    gap: 4px;
+}
+.t-sec-card>div {
+    width: 510px;
+    height: 270px;
+}
+
+.t-c-toltip {
+    max-width: 100%;
+    background-color: #0000009b;
+    padding: 4px 10px;
+    font-weight: 400;
+    font-size: 12px;
+    color: #FFF;
+    bottom: 14px;
+    left: 16px;
+    word-break: break-all;
 }
