--- a/src/Pages/Editor/Coding/Coding.css
+++ b/src/Pages/Editor/Coding/Coding.css
@@ -48,13 +48,16 @@
 }
 
 .cs-l-cont input {
+    border: solid 1px #787f84;
+    border-radius: 4px;
     padding: 12px 18px;
     font-size: 15px;
     font-weight: 400;
 }
 
 .cs-l-cont textarea {
-    height: 100px;
+    border-radius: 4px;
+    height: 110px;
     width: 100%;
     padding: 12px 18px;
     font-size: 15px;
