--- a/src/Pages/Editor/GetCode/CodeHtml.css
+++ b/src/Pages/Editor/GetCode/CodeHtml.css
@@ -1,4 +1,5 @@
 .get-code {
+    background-color: #00000059;
     z-index: 10;
 }
 
@@ -12,6 +13,8 @@
 
 .get-card>textarea {
     min-height: 420px;
+    width: 100%;
+    resize: none;
 }
 
 .get-card>.btn-close {
